# generics

./: .travis.yml  Cargo.toml  README.md
.github/workflows/: ci.yml
generics_derive/: Cargo.toml
generics_derive/src/: lib.rs
src/: lib.rs  prim.rs
tests/: basic_struct.rs  struct_generic.rs  struct_named.rs  struct_nested.rs  struct_tuple.rs  struct_unit.rs
