[package]
name = "generics"
version = "0.1.0"
authors = ["Erik Desjardins <erikdesjardins@users.noreply.github.com>"]
license = "MIT"
description = "Datatype generics"
repository = "https://github.com/erikdesjardins/generics"
documentation = "https://docs.rs/generics"
readme = "./README.md"
categories = ["data-structures"]
keywords = ["datatype", "generics", "datatype-generic"]

[dependencies]
