[package]
name = "generics_derive"
version = "0.1.0"
authors = ["Erik Desjardins <erikdesjardins@users.noreply.github.com>"]
license = "MIT"
description = "Proc macro for datatype generics"
repository = "https://github.com/erikdesjardins/generics"
documentation = "https://docs.rs/generics_derive"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
syn = "0.15"
quote = "0.6"
